# serializer version: 1
# name: test_chain_of_thought_snapshots
  ''
# ---
# name: test_chain_of_thought_snapshots.1
  '<think_digit>64</think_digit>'
# ---
# name: test_chain_of_thought_snapshots.2
  '<think_digit>15<think_multi>34</think_multi>4</think_digit>'
# ---
# name: test_chain_of_thought_snapshots.3
  '<think_digit>17<think_multi>13<think_digit>41</think_digit>14</think_multi>14<think_multi>78</think_multi>8</think_digit>'
# ---
# name: test_recursive_chain_of_thought_snapshots
  '<think_digit>15<think_multi>34</think_multi>4</think_digit>'
# ---
# name: test_recursive_chain_of_thought_snapshots.1
  '<think_multi>810</think_multi>'
# ---
# name: test_recursive_chain_of_thought_snapshots.2
  '<think_multi><think_digit>15<think_multi>34</think_multi>4</think_digit>45<think_digit>913</think_digit>139</think_multi>'
# ---
# name: test_recursive_chain_of_thought_snapshots.3
  '<think_multi><think_digit>17<think_multi>13<think_digit>41</think_digit>14</think_multi>14<think_multi>78</think_multi>8</think_digit>847<think_digit>11<think_multi>78</think_multi>810</think_digit>1081</think_multi>'
# ---
